Case Study - Rising Cost in London Housing '98 to '24 update 2

--- a/Unit 4 Challenge - Tier 3.ipynb
+++ b/Unit 4 Challenge - Tier 3.ipynb
@@ -824,39 +824,53 @@
     "What can you conclude? Type out your conclusion below. \n",
     "\n",
     "Look back at your notebook. Think about how you might summarize what you have done, and prepare a quick presentation on it to your mentor at your next meeting. \n",
+    "We hope you enjoyed this practical project. It should have consolidated your data hygiene and pandas skills by looking at a real-world problem involving just the kind of dataset you might encounter as a budding data scientist. Congratulations, and looking forward to seeing you at the next step in the course!\n",
     "\n",
-    "We hope you enjoyed this practical project. It should have consolidated your data hygiene and pandas skills by looking at a real-world problem involving just the kind of dataset you might encounter as a budding data scientist. Congratulations, and looking forward to seeing you at the next step in the course! "
+    "Borough          2024 & 1995 Price Difference    2024 & 1995 Percent Difference\n",
+    "Hackney          521701.273455                   790.163437\n",
+    "Waltham Forest   427713.519537                   697.966149\n",
+    "City of London   680614.741844                   686.899819\n",
+    "Southwark       414740.446255                    645.409429\n",
+    "Lambeth         438474.308682                    643.814489\n",
+    "Newham          343312.273595                    629.074008\n",
+    "Lewisham        369064.483985                    626.789088\n",
+    "Westminster     836057.266967                    625.373673\n",
+    "Islington      576624.430688                     603.447242\n",
+    "Brent           438774.40816                     600.815224\n",
+    "\n",
+    "Index                  Borough  Price Ratio\n",
+    "0                      Hackney  16.13\n",
+    "1               Waltham Forest  17.14\n",
+    "2                    Southwark  18.13\n",
+    "3                     Lewisham  18.35\n",
+    "4                  Westminster  18.68\n",
+    "5                       Newham  18.85\n",
+    "6               City of London  18.86\n",
+    "7                     Haringey  19.48\n",
+    "8        Kensington & Chelsea  19.68\n",
+    "9                     Lambeth  20.17\n",
+    "\n",
+    "In short, Hackney, Westminster, City of London are the boroughs with the highest increase in house prices and still within the top 10 rate of increase in house prices since 1995. Additionally, they remain to have the lowest 10 ratio price ratios which indicates that they are also one of the most consistently increasing in prices over a shorter time frame as well. Despite that being true, Islington is the newest member in the top 10 rates of house price increases that wasn't present between 1998 and 2018, indicating that they may be an up and coming market in demand for new homeowners."
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": [
-    "Hackney   521701.273455   790.163437\n",
-    "Waltham Forest   427713.519537   697.966149\n",
-    "City of London   680614.741844   686.899819\n",
-    "Southwark   414740.446255   645.409429\n",
-    "Lambeth   438474.308682   643.814489\n",
-    "Newham   343312.273595   629.074008\n",
-    "Lewisham   369064.483985   626.789088\n",
-    "Westminster   836057.266967   625.373673\n",
-    "Islington   576624.430688   603.447242\n",
-    "Brent    438774.40816   600.815224\n",
-    "\n",
-    "Ratio\n",
-    "0       0               Hackney  16.13\n",
-    "1       0        Waltham Forest  17.14\n",
-    "2       0             Southwark  18.13\n",
-    "3       0              Lewisham  18.35\n",
-    "4       0           Westminster  18.68\n",
-    "5       0                Newham  18.85\n",
-    "6       0        City of London  18.86\n",
-    "7       0              Haringey  19.48\n",
-    "8       0  Kensington & Chelsea  19.68\n",
-    "9       0               Lambeth  20.17\n",
-    "\n",
-    "In short, Hackney, Westminster, City of London are the boroughs with the highest increase in house prices and still within the top 10 rate of increase in house prices since 1995. Additionally, they remain to have the lowest 10 ratio price ratios which indicates that they are also one of the most consistently increasing in prices over a shorter time frame as well. Despite that being true, Islington is the newest member in the top 10 rates of house price increases that wasn't present between 1998 and 2018, indicating that they may be an up and coming market in demand for new homeowners.3ee"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
